--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
 <div class="md:container md:mx-auto flex flex-col h-screen min-h-screen p-10">
   <header class="h-20">
-    <h1 class="text-3xl font-bold">jurassic.ai</h1>
+    <h1 class="text-3xl font-bold cursor-pointer" [routerLink]="['/']">jurassic.ai</h1>
   </header>
-  <main class="flex-1 overflow-y-auto">
+  <main class="flex-1">
     <router-outlet></router-outlet>
   </main>
-  <footer class="h-20 flex-none text-center">
-    <p class="text-sm text-gray-600">© 2023 jurassic.ai</p>
+  <footer class="h-20 flex items-center justify-center gap-2">
+    <p class="text-sm text-gray-600 cursor-pointer" [routerLink]="['/']">home</p> | <p class="text-sm text-gray-600 cursor-pointer" [routerLink]="['/about']">about</p> | <a class="text-sm text-gray-600 cursor-pointer" href="https://github.com/Wimpje/next.discovery/">github</a>
   </footer>
 </div>
