Step 5b. Finalize UI and hook things up so it is working
- add loading component (which is like a chat message, but shows a three dots loader)
- make the inputbox a simple form
- improve the display of the chat in the app.component
- add sources (provided by AI21 service)
- add scroll to bottom on new question

--- a/client/app/about/about.component.html
+++ b/client/app/about/about.component.html
@@ -1,4 +1,4 @@
-<div class="py-16 bg-white">
+<div class="py-16 bg-white h-full">
   <div class="container m-auto px-6 text-gray-600 md:px-12 xl:px-6">
       <div class="space-y-6 md:space-y-0 md:flex md:gap-6 lg:items-center lg:gap-12">
         <div class="md:5/12 lg:w-5/12">
@@ -6,7 +6,7 @@
         </div>
         <div class="md:7/12 lg:w-6/12">
           <h2 class="text-2xl text-gray-900 font-bold md:text-4xl">about jurassic.ai</h2>
-          <p class="mt-6 text-gray-600">Using this website as a template, might help you get started in building your own discovery interface, using AI.</p>
+          <p class="mt-6 text-gray-600">Using this website as a template, it might help you get started with building your own discovery interface, using AI.</p>
           <p class="mt-4 text-gray-600">Go to <a class="underline cursor-pointer" href="https://github.com/Wimpje/next.discovery/">this github repository</a> for the code and instructions.</p>
         </div>
       </div>
