--- a/client/app/app.component.html
+++ b/client/app/app.component.html
@@ -1,11 +1,11 @@
 <div class="md:container md:mx-auto flex flex-col h-screen min-h-screen p-10">
-  <header class="h-20">
+  <header class="h-[10vh]">
     <h1 class="text-3xl font-bold cursor-pointer" [routerLink]="['/']">jurassic.ai</h1>
   </header>
-  <main class="flex-1">
+  <main class="flex-1 flex justify-end flex-col">
     <router-outlet></router-outlet>
   </main>
-  <footer class="h-20 flex items-center justify-center gap-2">
+  <footer class="h-[10vh] flex items-center justify-center gap-2">
     <p class="text-sm text-gray-600 cursor-pointer" [routerLink]="['/']">home</p> | <p class="text-sm text-gray-600 cursor-pointer" [routerLink]="['/about']">about</p> | <a class="text-sm text-gray-600 cursor-pointer" href="https://github.com/Wimpje/next.discovery/">github</a>
   </footer>
 </div>
