--- a/client/app/chat/message/message.component.html
+++ b/client/app/chat/message/message.component.html
@@ -1,7 +1,15 @@
 <div class="chat-message my-1">
   <div class="flex items-end" [ngClass]="{'justify-end': isQuestion}">
      <div class="flex flex-col space-y-2 max-w-xs mx-2 order-2 items-start" [ngClass]="{'order-2': isAnswer, 'order-1': isQuestion}">
-        <span class="px-4 py-2 rounded-lg inline-block rounded-bl-none" [ngClass]="{'bg-gray-300 text-gray-600': isAnswer, 'bg-blue-600 text-white': isQuestion}">{{message.text}}</span>
+        <div class="px-4 py-2 rounded-lg inline-block" [ngClass]="{'bg-gray-300 text-gray-600 rounded-bl-none': isAnswer, 'bg-blue-600 text-white rounded-br-none': isQuestion}">
+          <span>{{message.text}}</span>
+          <div class="py-2" *ngIf="message.sources?.length">
+            <h2 class="font-bold">Sources:</h2>
+            <ul class="text-xs text-gray-500 pl-4 list-disc">
+              <li *ngFor="let source of message.sources"><a [href]="source.url" target="_blank" class="underline cursor-pointer">wikipedia.org/{{ source.name }}</a></li>
+            </ul>
+          </div>
+        </div>
      </div>
      <img [src]="userIcon" alt="profile picture" class="w-7 h-7 rounded-full order-1 bg-gray-100 p-1.5" />
   </div>
