--- a/client/app/chat/chat.component.html
+++ b/client/app/chat/chat.component.html
@@ -1,11 +1,18 @@
-<div class="flex-1 p:2 sm:p-6 justify-between flex flex-col h-screen">
-  <div id="messages" class="flex flex-col space-y-4 p-3 overflow-y-auto scrollbar-thumb-blue scrollbar-thumb-rounded scrollbar-track-blue-lighter scrollbar-w-2 scrolling-touch">
-     <div class="contents" *ngFor="let chatMessage of chatMessages">
+<div class="flex-1 p:2 sm:p-6 justify-between flex flex-col h-[80vh]">
+  <div id="messages" #viewport class="flex flex-col space-y-4 p-3 overflow-y-auto scrollbar-thumb-blue scrollbar-thumb-rounded scrollbar-track-blue-lighter scrollbar-w-2 scrolling-touch">
+    <div class="flex w-full rounded-md border border-red-300 text-sm text-red-700 bg-red-50 m-2 p-2 place-content-between" *ngIf="error">
+      <span>{{error}}</span>
+      <button class="font-bold" (click)="error = ''">✖</button>
+    </div>
+    <div class="contents" *ngFor="let chatMessage of chatMessages">
       <app-message [message]="chatMessage"></app-message>
-     </div>
-     <div class="border-t-2 border-gray-200 px-4 pt-4 mb-2 sm:mb-0">
-       <app-inputbox></app-inputbox>
-     </div>
+    </div>
+    <div *ngIf="showLoader" class="contents">
+      <app-loading></app-loading>
+    </div>
 
   </div>
+  <div class="border-t-2 border-gray-200 px-4 pt-4 mb-2 sm:mb-0">
+    <app-inputbox></app-inputbox>
+ </div>
 </div>
